Upgrade to Guava 19.0
Removals in Guava:

- `InputSupplier` and `OutputSupplier`-related APIs (18.0)
- `Enums.valueOfFunction()` (18.0)
- `MapMaker.softValues()` (19.0)
- `AsyncEventBus.dispatchQueuedEvents()` (19.0)

If a plugin depends on these APIs, it will break. Otherwise things
would function as before for Gradle users.

The advantage of upgrading is that we could start to use Java 6 or
Java 7 features with Guava, as well as bugfixes and performance
improvements.

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -28,7 +28,7 @@ repositories {
 dependencies {
     compile 'org.ow2.asm:asm-all:5.0.3'
     compile gradleApi()
-    compile 'com.google.guava:guava-jdk5:14.0.1@jar'
+    compile 'com.google.guava:guava:19.0@jar'
     compile 'commons-lang:commons-lang:2.6@jar'
     compile localGroovy()
     compile('org.codehaus.groovy.modules.http-builder:http-builder:0.7.2') {
