--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -82,7 +82,7 @@ libraries.commons_httpclient = dependencies.module('org.apache.httpcomponents:ht
 
 libraries += [
         dom4j: 'dom4j:dom4j:1.6.1@jar',
-        guava: 'com.google.guava:guava-jdk5:17.0@jar',
+        guava: 'com.google.guava:guava:19.0@jar',
         jsr305: 'com.google.code.findbugs:jsr305:1.3.9@jar',
         groovy: "org.codehaus.groovy:groovy-all:${versions.groovy}",
         jaxen: 'jaxen:jaxen:1.1@jar',
