Tune performance test runner JVM args
- optimize for stable performance on the runner to minimize the impact
  of measurement, monitoring and execution of the build on the
  performance test results

--- a/gradle/performanceTest.gradle
+++ b/gradle/performanceTest.gradle
@@ -141,12 +141,16 @@ performanceTestTasks.all { PerformanceTest task ->
     maxParallelForks = 1
     checks = 'speed'
 
+    // JVM arguments to get more stable performance on the measurements side to minimize the affect of measuring and executing the build on the performance measurement results
+    jvmArgs '-XX:+AlwaysPreTouch', '-XX:BiasedLockingStartupDelay=0', '-XX:CICompilerCount=2', '-Dsun.io.useCanonCaches=false'
+    environment 'MALLOC_ARENA_MAX', '2' // see https://devcenter.heroku.com/articles/tuning-glibc-memory-behavior#what-value-to-choose-for-malloc_arena_max
 
     doFirst {
         // Some performance builds generate a lot of output,
         // that is buffered until the test finishes via GradleExecuter.
         if (System.getProperty('sun.arch.data.model').contains("64")) {
-            jvmArgs '-Xmx4g'
+            minHeapSize = '4g'
+            maxHeapSize = '4g'
         } else {
             println "not increasing JVM heap size due to use of 32bit JVM"
         }
